# cinir

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile.in  README.md  mainpage.dox
src/: CMakeLists.txt  cmake_uninstall.cmake  libcinir.h
src/libcinir/: CMakeLists.txt  cinir.h  cinireader.cpp  cinireader.h  cinisection.cpp  cinisection.h  exception.cpp  exception.h  field.h  libcinir.rc  reader.cpp  reader.h  section.cpp  section.h  utils.cpp  utils.h
